test/spec_vectors/func/fail/module_57.wat
(module (func $type-break-void-vs-nums (result i32 i32) (br 0) (i32.const 1) (i32.const 2)))